Updated code with docstrings

--- a/data/Generate_Database_Stocks.ipynb
+++ b/data/Generate_Database_Stocks.ipynb
@@ -9,7 +9,8 @@
     },
     "kernelspec": {
       "display_name": "Python 3",
-      "name": "python3"
+      "name": "python3",
+      "language": "python"
     }
   },
   "cells": [
@@ -19,20 +20,32 @@
         "id": "I-d3hR30sELo"
       },
       "source": [
-        "# import libraries\r\n",
-        "import math\r\n",
-        "from datetime import date, timedelta\r\n",
-        "import pandas_datareader as web\r\n",
-        "import numpy as np\r\n",
-        "import pandas as pd\r\n",
-        "from sqlalchemy import create_engine\r\n",
-        "\r\n",
-        "from sklearn.preprocessing import MinMaxScaler\r\n",
-        "from keras.models import Sequential\r\n",
-        "from keras.layers import Dense, LSTM\r\n"
+        "# import libraries\n",
+        "import math\n",
+        "from datetime import date, timedelta\n",
+        "import pandas_datareader as web\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sqlalchemy import create_engine\n",
+        "\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense, LSTM\n"
       ],
       "execution_count": 1,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'sklearn'",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-1-14e61a93161a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msqlalchemy\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocessing\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMinMaxScaler\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mDense\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLSTM\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -44,10 +57,17 @@
         "outputId": "58752295-21ca-4f1b-c7cc-8a3fe7483e09"
       },
       "source": [
-        "# I will be considering dates of stock ranging from current date(today) to 600 days from current day for analysis\r\n",
-        "today = date.today()\r\n",
-        "prev_600 = (today - timedelta(600)).strftime(\"%Y-%m-%d\")\r\n",
-        "print(prev_600, today)"
+        "def get_dates():\n",
+        "    \"\"\"\n",
+        "    I will be considering dates of stock ranging from current date(today) to 600 days from current day for      analysis.\n",
+        "    Args: None\n",
+        "    Returns:\n",
+        "    today (date): Today's date\n",
+        "    prev_600 (date): Previous 600 day date\n",
+        "    \"\"\"\n",
+        "    today = date.today()\n",
+        "    prev_600 = (today - timedelta(600)).strftime(\"%Y-%m-%d\")\n",
+        "    return prev_600, today"
       ],
       "execution_count": 2,
       "outputs": [
@@ -66,65 +86,72 @@
         "id": "uNB2W5GVsKNA"
       },
       "source": [
-        "# Prediction for stock are based on the following steps:-\r\n",
-        "# Creating the dataframe by using YAHOO as datasource, today and prev_600 dates\r\n",
-        "# Split the dataframe into train and test dataset.\r\n",
-        "# Defining the model. I have used LSTM for this task, which is a variation of Recurrent Neural Network.\r\n",
-        "# Fit the model by using train dataset\r\n",
-        "# Predict the stock prices based on test dataset\r\n",
-        "# Finally store the Date, Actual Price and Prediction price in the database named after Stock\r\n",
-        "\r\n",
-        "def process_predict_generate_data(stock):\r\n",
-        "  df = web.DataReader(stock+'.NS', data_source='yahoo', start=prev_600, end=today)\r\n",
-        "  data = df.filter(['Close'])\r\n",
-        "  dataset = data.values\r\n",
-        "  training_data_len = math.ceil(len(dataset)*.8)\r\n",
-        "\r\n",
-        "  # Scaling the data\r\n",
-        "  scaler = MinMaxScaler(feature_range=(0,1))\r\n",
-        "  scaled_data = scaler.fit_transform(dataset)\r\n",
-        "\r\n",
-        "  # Creating training dataset\r\n",
-        "  train_data = scaled_data[0:training_data_len, : ]\r\n",
-        "  x_train = []\r\n",
-        "  y_train = []\r\n",
-        "  for i in range(60, len(train_data)):\r\n",
-        "    x_train.append(train_data[i-60:i, 0])\r\n",
-        "    y_train.append(train_data[i, 0])\r\n",
-        "\r\n",
-        "  x_train, y_train = np.array(x_train), np.array(y_train)\r\n",
-        "  x_train = np.reshape(x_train, (x_train.shape[0], x_train.shape[1], 1))\r\n",
-        "\r\n",
-        "  # Building LSTM model\r\n",
-        "  model = Sequential()\r\n",
-        "  model.add(LSTM(50, return_sequences=True, input_shape=(x_train.shape[1], 1)))\r\n",
-        "  model.add(LSTM(50,return_sequences=False))\r\n",
-        "  model.add(Dense(25))\r\n",
-        "  model.add(Dense(1))\r\n",
-        "  model.compile(optimizer='adam', loss='mean_squared_error')\r\n",
-        "  model.fit(x_train, y_train, batch_size=1, epochs=1, verbose=1)\r\n",
-        "\r\n",
-        "  # Creating testing dataset\r\n",
-        "  test_data = scaled_data[training_data_len - 60: , :]\r\n",
-        "  x_test = []\r\n",
-        "  y_test = dataset[training_data_len:, :]\r\n",
-        "  for i in range(60, len(test_data)):\r\n",
-        "    x_test.append(test_data[i-60:i, 0])\r\n",
-        "  x_test = np.array(x_test)\r\n",
-        "  x_test = np.reshape(x_test, (x_test.shape[0],x_test.shape[1], 1))\r\n",
-        "\r\n",
-        "  #Get the predictions\r\n",
-        "  predictions = model.predict(x_test)\r\n",
-        "  predictions = scaler.inverse_transform(predictions)\r\n",
-        "\r\n",
-        "  train = data[: training_data_len]\r\n",
-        "  valid = data[training_data_len: ]\r\n",
-        "  valid['Predictions'] = predictions\r\n",
-        "  valid['Date'] = valid.index\r\n",
-        "  database_filename = stock+'.db'\r\n",
-        "  engine = create_engine('sqlite:///{}'.format(database_filename))\r\n",
-        "\r\n",
-        "  table_name = database_filename.split('.')[0]\r\n",
+        "def process_predict_generate_data(stock):\n",
+        "  \"\"\"\n",
+        "  Prediction for stock are based on the following steps:-\n",
+        "   - Creating the dataframe by using YAHOO as datasource, today and prev_600 dates\n",
+        "   - Scale the dataframe using MinMaxScaler and Split it into train and test dataset in ratio of 4:1.\n",
+        "   - Defining the model. I have used LSTM for this task, which is a variation of Recurrent Neural Network.\n",
+        "   - Fit the model by using train dataset\n",
+        "   - Predict the stock prices based on test dataset\n",
+        "   - Finally store the Date, Actual Price and Prediction price in the database named after Stock\n",
+        "   \n",
+        "   Args:\n",
+        "   stock (string): Name of the stock\n",
+        "   Returns:\n",
+        "   None; Creates a database containing prediction price\n",
+        "  \"\"\"\n",
+        "  prev_600, today = get_dates()\n",
+        "  df = web.DataReader(stock+'.NS', data_source='yahoo', start=prev_600, end=today)\n",
+        "  data = df.filter(['Adj Close']) # prediction for the Adjusted Close price\n",
+        "  dataset = data.values\n",
+        "  training_data_len = math.ceil(len(dataset)*.8)\n",
+        "\n",
+        "  # Scaling the data\n",
+        "  scaler = MinMaxScaler(feature_range=(0,1))\n",
+        "  scaled_data = scaler.fit_transform(dataset)\n",
+        "\n",
+        "  # Creating training dataset\n",
+        "  train_data = scaled_data[0:training_data_len, : ]\n",
+        "  x_train = []\n",
+        "  y_train = []\n",
+        "  for i in range(60, len(train_data)):\n",
+        "    x_train.append(train_data[i-60:i, 0])\n",
+        "    y_train.append(train_data[i, 0])\n",
+        "\n",
+        "  x_train, y_train = np.array(x_train), np.array(y_train)\n",
+        "  x_train = np.reshape(x_train, (x_train.shape[0], x_train.shape[1], 1))\n",
+        "\n",
+        "  # Building LSTM model\n",
+        "  model = Sequential()\n",
+        "  model.add(LSTM(50, return_sequences=True, input_shape=(x_train.shape[1], 1)))\n",
+        "  model.add(LSTM(50,return_sequences=False))\n",
+        "  model.add(Dense(25))\n",
+        "  model.add(Dense(1))\n",
+        "  model.compile(optimizer='adam', loss='mean_squared_error')\n",
+        "  model.fit(x_train, y_train, batch_size=1, epochs=10, verbose=1)\n",
+        "\n",
+        "  # Creating testing dataset\n",
+        "  test_data = scaled_data[training_data_len - 60: , :]\n",
+        "  x_test = []\n",
+        "  y_test = dataset[training_data_len:, :]\n",
+        "  for i in range(60, len(test_data)):\n",
+        "    x_test.append(test_data[i-60:i, 0])\n",
+        "  x_test = np.array(x_test)\n",
+        "  x_test = np.reshape(x_test, (x_test.shape[0],x_test.shape[1], 1))\n",
+        "\n",
+        "  #Get the predictions\n",
+        "  predictions = model.predict(x_test)\n",
+        "  predictions = scaler.inverse_transform(predictions)\n",
+        "\n",
+        "  train = data[: training_data_len]\n",
+        "  valid = data[training_data_len: ]\n",
+        "  valid['Predictions'] = predictions\n",
+        "  valid['Date'] = valid.index\n",
+        "  database_filename = stock+'.db'\n",
+        "  engine = create_engine('sqlite:///{}'.format(database_filename))\n",
+        "\n",
+        "  table_name = database_filename.split('.')[0]\n",
         "  valid.to_sql(table_name, engine, index=False, if_exists = 'replace')"
       ],
       "execution_count": 3,
@@ -136,61 +163,38 @@
         "id": "OBWrq4ynyRmr"
       },
       "source": [
-        "# List of stock on which Predictions are done.\r\n",
-        "# Note: These are stocks in NIFTY50\r\n",
-        "stock_data = [\r\n",
-        "  \"ADANIPORTS\",\"ASIANPAINT\",\"AXISBANK\",\"BAJAJ-AUTO\",\r\n",
-        "  \"BAJFINANCE\",\"BAJAJFINSV\",\"BPCL\",\"BHARTIARTL\",\"BRITANNIA\",\r\n",
-        "  \"CIPLA\",\"COALINDIA\",\"DIVISLAB\",\"DRREDDY\",\"EICHERMOT\",\r\n",
-        "  \"GAIL\",\"GRASIM\",\"HCLTECH\",\"HDFCBANK\",\"HDFCLIFE\",\"HEROMOTOCO\",\r\n",
-        "  \"HINDALCO\",\"HINDUNILVR\",\"HDFC\",\"ICICIBANK\",\"ITC\",\"IOC\",\"INDUSINDBK\",\r\n",
-        "  \"INFY\",\"JSWSTEEL\",\"KOTAKBANK\",\"LT\",\"M&M\",\"MARUTI\",\"NTPC\",\"NESTLEIND\",\r\n",
-        "  \"ONGC\",\"POWERGRID\",\"RELIANCE\",\"SBILIFE\",\"SHREECEM\",\"SBIN\",\"SUNPHARMA\",\"TCS\",\r\n",
-        "  \"TATAMOTORS\",\"TATASTEEL\",\"TECHM\",\"TITAN\",\"UPL\",\"ULTRACEMCO\",\"WIPRO\"\r\n",
-        "]"
+        "def generate_database():\n",
+        "  \"\"\"\n",
+        "  The below listed stocks are in NIFTY50. For each of these stocks, processing and predictions are made and stored in the database\n",
+        "  Args: None\n",
+        "  Returns:\n",
+        "\n",
+        "  \"\"\"\n",
+        "  stock_data = [\n",
+        "  \"ADANIPORTS\",\"ASIANPAINT\",\"AXISBANK\",\"BAJAJ-AUTO\",\n",
+        "  \"BAJFINANCE\",\"BAJAJFINSV\",\"BPCL\",\"BHARTIARTL\",\"BRITANNIA\",\n",
+        "  \"CIPLA\",\"COALINDIA\",\"DIVISLAB\",\"DRREDDY\",\"EICHERMOT\",\n",
+        "  \"GAIL\",\"GRASIM\",\"HCLTECH\",\"HDFCBANK\",\"HDFCLIFE\",\"HEROMOTOCO\",\n",
+        "  \"HINDALCO\",\"HINDUNILVR\",\"HDFC\",\"ICICIBANK\",\"ITC\",\"IOC\",\"INDUSINDBK\",\n",
+        "  \"INFY\",\"JSWSTEEL\",\"KOTAKBANK\",\"LT\",\"M&M\",\"MARUTI\",\"NTPC\",\"NESTLEIND\",\n",
+        "  \"ONGC\",\"POWERGRID\",\"RELIANCE\",\"SBILIFE\",\"SHREECEM\",\"SBIN\",\"SUNPHARMA\",\"TCS\",\n",
+        "  \"TATAMOTORS\",\"TATASTEEL\",\"TECHM\",\"TITAN\",\"UPL\",\"ULTRACEMCO\",\"WIPRO\"]\n",
+        "  for stock in stock_data:\n",
+        "    process_predict_generate_data(stock)\n"
       ],
       "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "rPhvEs_UweQb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "01c9f381-619c-438d-f05a-f3d6fa108af4"
-      },
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "# Iterate through stock_data and perform processing on each stock \r\n",
-        "for stock in stock_data:\r\n",
-        "  process_predict_generate_data(stock)"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "265/265 [==============================] - 8s 22ms/step - loss: 0.0060\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:54: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:55: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
-          ],
-          "name": "stderr"
-        }
+        "\"\"\"\n",
+        "Function call to generate the database for all thestocks in NIFTY50\n",
+        "\"\"\"\n",
+        "generate_database()"
       ]
     },
     {
